# Subtext-app

./: .gitignore  README.md  buildFrontend.ps1  bundleApp.ps1  todo.plan
.github/workflows/: build-windows-gpu.yml  test-local-runner-env.yml  test-smb.yml
backend/: .gitignore  Subtext.spec  config.py  cuda-requirements.txt  cuda-requirements_11_8.txt  debug.py  debug_start_api.py  init.py  key.pub  package.iss  pyproject.toml  requirements.txt  start_app.py
backend/build_tools/: build_generate_signatures.py
backend/home/: home.py
backend/inference/: inference.py
backend/inference/whisper/: api.py
backend/inference/whisper (CPU)/: api.py
backend/inference/whisper (GPU)/: api.py
backend/test/: verify_file_signatures.py
frontend/: .prettierignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(navbar)/: layout.tsx  page.tsx
frontend/components/: appInfoDialog.tsx  fileMenu.tsx  jobsDropDown.tsx  layout.js  menu.tsx  menuDropDown.tsx  navbar.tsx  settingsDialog.tsx  settingsMenu.tsx  settingsStore.tsx  stores.tsx
frontend/components/ui/: button.tsx  checkbox.tsx  dropdown-menu.tsx  form.tsx  label.tsx  menubar.tsx  resizable.tsx  scroll-area-shadow.tsx  scroll-area.tsx  switch.tsx  toast.tsx  toggle-group.tsx  toggle.tsx
frontend/lib/: colourscheme.ts  fonts.ts  licenses.ts  stores.ts  toolbar.ts  use-watch-scrollarea-overflow.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/styles/: globals.css
misc/: install_windows_runner_dependencies.ps1
(+2 files in other folders)
