[project]
name = "Subtext-Backend"
version = "1.1.0"
description = "Backend for the UV app"
requires-python = "==3.11.9"
dependencies = [
    "broadcaster>=0.3.1",
    "cryptography>=45.0.2",
    "fastapi>=0.115.12",
    "ffmpy>=0.5.0",
    "openai-whisper>=20240930",
    "orjson>=3.10.18",
    "platformdirs>=4.3.8",
    "pydantic-settings>=2.9.1",
    "pyinstaller>=6.13.0",
    "pysubs2>=1.8.0",
    "pytest>=8.3.5",
    "pywebview>=5.4",
    "torch>=2.6.0",
    "uvicorn>=0.34.2",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
